--- a/languages/fortran/config.toml
+++ b/languages/fortran/config.toml
@@ -1,7 +1,7 @@
 name = "Fortran"
 code_fence_block_name = "fortran"
 grammar = "fortran"
-path_suffixes = ["f90", "f95", "f03", "f08", "f", "F"]
+path_suffixes = ["f", "f90", "f95", "f03", "f08", "F", "F90", "F95", "F03", "F08"]
 line_comments = ["! "]
 autoclose_before = ";:.,=}])>"
 brackets = [
